# TP_Shilin_Vadim

.github/workflows/: task5.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt
task2/C/: main.cpp
task3/: .gitignore  CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.h
task6/: Dockerfile
task6/cmake-with-flask/: Dockerfile
